--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@ignite-ui/ts-config": "*",
     "@ignite-ui/tokens": "*",
     "tsup": "^6.7.0",
     "typescript": "^5.0.2"
