--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -26,10 +26,11 @@
     "vite": "^4.2.1"
   },
   "dependencies": {
+    "@ignite-ui/eslint-config": "*",
     "@ignite-ui/react": "*",
     "@ignite-ui/tokens": "*",
-    "@ignite-ui/eslint-config": "*",
     "@ignite-ui/ts-config": "*",
+    "@storybook/addon-a11y": "^6.5.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
