🔨refactor: Renomeando o Projeto (p/ coincidir com meu NPM)

--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ignite-ui/docs",
+  "name": "@ignite-andre/docs",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -28,10 +28,10 @@
     "vite": "^4.2.1"
   },
   "dependencies": {
-    "@ignite-ui/eslint-config": "*",
-    "@ignite-ui/react": "*",
-    "@ignite-ui/tokens": "*",
-    "@ignite-ui/ts-config": "*",
+    "@ignite-andre/eslint-config": "*",
+    "@ignite-andre/react": "*",
+    "@ignite-andre/tokens": "*",
+    "@ignite-andre/ts-config": "*",
     "@storybook/addon-a11y": "^6.5.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
